@@ -1,3 +1,8 @@
+2006-12-14  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/tmpl/keyfile.sgml: Clarify the behaviour
+	wrt. to duplicate keys and groups.
+
 2006-10-01  Matthias Clasen  <mclasen@redhat.com>
 	
 	* === Released 2.12.4 ===
